--- a/Class_9_03-09-2022.ipynb
+++ b/Class_9_03-09-2022.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "50d5b4b0",
    "metadata": {},
    "outputs": [],
@@ -665,32 +665,41 @@
     "    def __init__(self,country,hs_code):\n",
     "        self.country=country\n",
     "        self.hs_code=hs_code\n",
-    "    def set_name(self,newName):\n",
-    "        self.country=newName\n",
+    "    def get_name(self):\n",
+    "        print(f\"Country name is {country} and HS_Code is {hs_code}\")\n",
+    "    def set_name(self,newCountry, newHS_Code):\n",
+    "              self.country=newCountry\n",
+    "              self.hs_code=newHS_Code\n",
+    "              print(f\"Country name is {country} and HS_Code is {hs_code}\")\n",
+    "                        \n",
+    "   ## print(f\"Country name is {self.country} and goods is {self.hs_code}\")       \n",
+    "              \n",
+    "              \n",
+    "        \n",
     "        \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "c616349d",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'tbml_Exception' is not defined",
+     "evalue": "name 'get_name' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [93]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m s\u001b[38;5;241m=\u001b[39m\u001b[43mtbml_Exception\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUSA\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m1234.2255\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tbml_Exception' is not defined"
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m s\u001b[38;5;241m=\u001b[39m\u001b[43mget_name\u001b[49m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_name' is not defined"
      ]
     }
    ],
    "source": [
-    "s=tbml_Exception(\"USA\",1234.2255)"
+    "s=get_name()"
    ]
   },
   {
