--- a/Class 7 20-08-2022 GIT HUB.ipynb
+++ b/Class 7 20-08-2022 GIT HUB.ipynb
@@ -50,7 +50,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "126f466b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def favoritebook(title):\n",
+    "    print(f\"One of my favorite books is {title.title()}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
+   "id": "1f744b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One of my favorite books is Nahjulbalagha!\n"
+     ]
+    }
+   ],
+   "source": [
+    "favoritebook('Nahjulbalagha')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5deb841b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " I have a hamster, \n",
+      "\n",
+      " My hamster is Rabbit\n",
+      "\n",
+      " I have a hamster, \n",
+      "\n",
+      " My hamster is Panda\n"
+     ]
+    }
+   ],
+   "source": [
+    "def describe_pet(animal_type, pet_name):\n",
+    "    print(f\"\\n I have a {animal_type}, \")\n",
+    "    print(f\"\\n My {animal_type} is {pet_name.title()}\")\n",
+    "describe_pet('hamster','rabbit')\n",
+    "describe_pet('hamster','panda')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "935c10cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6530705e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7bcf5b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet_user(username):\n",
+    "    print(f\"hello, {username.title()}!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53e0ab8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, Jesse!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet_user('jesse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "88f7c8eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcTriangle(l,b,h=2):\n",
+    "    global tri\n",
+    "    tri = l * b * h\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "cbc5a963",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "calcTriangle(2,3,6)    #positional argument\n",
+    "print(tri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e71985e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "calcTriangle(l=2, h=3, b=2)  #keyword argument\n",
+    "print(tri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "e688a09f",
    "metadata": {},
    "outputs": [],
@@ -59,6 +214,24 @@
     "    a=10\n",
     "    sq=a*a\n",
     "    print(sq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b4c2f1f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tri)"
    ]
   },
   {
@@ -77,6 +250,24 @@
    ],
    "source": [
     "calcSquare()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4f3ddb76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tri)"
    ]
   },
   {
