--- a/Class 11 (01-10-2022).ipynb
+++ b/Class 11 (01-10-2022).ipynb
@@ -790,8 +790,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1a407743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Teacher:\n",
+    "    def teach(self):\n",
+    "        print(\"Teacher is teaching\")\n",
+    "t1=Teacher()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae06657c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teacher is teaching\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using object to call method\n",
+    "t1.teach()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f264a9b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teacher is teaching\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using class name and pass object as argument to call method\n",
+    "Teacher.teach(t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1ed3f3f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#method overriding\n",
+    "class Student:\n",
+    "    def __init__(self,m1,m2):\n",
+    "        self.m1=m1\n",
+    "        self.m2=m2\n",
+    "s1=Student(80,90)\n",
+    "s2=Student(70,90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1dfe1aff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'Student' and 'Student'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Can we add object of Student class???\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43ms1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43ms2\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Student' and 'Student'"
+     ]
+    }
+   ],
+   "source": [
+    "#Can we add object of Student class???\n",
+    "s1 + s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0cc05ead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,m1,m2):\n",
+    "        self.m1=m1\n",
+    "        self.m2=m2\n",
+    "    def __add__(self,other):\n",
+    "        m1 =self.m1+other.m1\n",
+    "        m2=self.m2+other.m2\n",
+    "        st=Student(m1,m2)\n",
+    "        return st\n",
+    "    def __gt__(self,other):\n",
+    "        sum_s1=self.m1+self.m2\n",
+    "        sum_s2=other.m1+other.m2\n",
+    "        if sum_s1>sum_s2: return True\n",
+    "        else: return False \n",
+    "s1=Student(80,90)\n",
+    "s2=Student(45,60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "47a3ae98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3=s1+s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8ddf08cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3.m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b518c407",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3.m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4c2e74df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1>s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cdb6a38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -799,7 +987,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc05ead",
+   "id": "7196de83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbf5fe23",
    "metadata": {},
    "outputs": [],
    "source": []
